# Sincromisor

./: .gitignore  INSTALL.md  Pipfile  README.md  build-docker-base.sh  build-docker-services.sh  compose-consul-agent.yml  compose-consul-server.yml  compose-frontend.yml  compose-initializer.yml  compose-speech-extractor.yml  compose-speech-recognizer.yml  compose-storage.yml  compose-text-processor.yml  compose-voice-synthesizer.yml  compose.yml  config.yml.sample  install-client-assets.sh  install-client-toolchain.sh  install-client.sh  install-server-assets.sh  install-server-toolchain.sh  install-server.sh  install.sh  memo.md  pyproject.toml  setup-client.sh  setup-server.sh  setup.sh  start-server.sh  start.sh
.github/: copilot-instructions.md
Docker/common/: service-register.sh
Docker/env_vars/: .env.example  Caddyfile  config.yml  redis.conf  redis.env  sincro-rtc.env  speech-extractor.env  speech-recognizer.env  text-processor.env  voice-synthesizer.env
Docker/minio/: Dockerfile  minio-template.json  start-minio.sh
Docker/redis/: Dockerfile  redis-template.json  start-redis.sh
Docker/rproxy/: Dockerfile
Docker/service-initializer/: Dockerfile  initialize.sh
Docker/sincro-client/: Dockerfile  frontend-template.json  start-caddy.sh
Docker/sincro-client-base/: Dockerfile
Docker/sincro-frontend/: Dockerfile
Docker/sincro-rtc/: Dockerfile
Docker/sincro-server-base/: Dockerfile  (+1 more)
compose/: consul-agent.yml  consul-server.yml  frontend.yml  initializer.yml  mediamtx.yml  minio.yml  redis.yml  sincro-rtc.yml  speech-extractor.yml  speech-recognizer.yml  storage.yml  text-processor.yml  voice-synthesizer.yml
configs/: .env.example  .env.example-docker  Caddyfile
documents/: INSTALL.md
examples/: Caddyfile  Caddyfile.client  Caddyfile.rproxy  caddy.json  compose.env  config.yml  nginx.conf  redis.conf  sincromisor.service  voicevox.service
sincromisor-client/: character-glass.html  character.html  double.html  glass.html  index.html  package-lock.json  package.json  postcss.config.js  simple.html  single.html  tsconfig.json  vite.config.js
sincromisor-frontend/: package-lock.json  package.json  vite.config.js
sincromisor-server/: AudioBrokerTest.py  Launcher.py  Sincromisor.py
sincromisor-server/sincro-config/: pyproject.toml
sincromisor-server/sincro-config/src/sincro_config/: KeepAliveReporter.py  LoggerConfig.py  RTCIceServerConfig.py  ServiceDiscoveryReferrer.py  ServiceDiscoveryReporter.py  SincromisorArgumentParser.py  SincromisorConfig.py  SincromisorLoggerConfig.py  VoiceSynthesizerConfig.py  WebRTCConfig.py  WorkerConfig.py  WorkerStatus.py  WorkerStatusManager.py  __init__.py
sincromisor-server/sincro-models/: README.md  pyproject.toml
sincromisor-server/sincro-models/src/sincro_models/: ChatHistory.py  ChatMessage.py  SpeechExtractorInitializeRequest.py  SpeechExtractorResult.py  SpeechRecognizerResult.py  TextProcessorRequest.py  TextProcessorResult.py  VoiceSynthesizerRequest.py  VoiceSynthesizerResult.py  VoiceSynthesizerResultFrame.py  VoiceVoxQuery.py  __init__.py
sincromisor-server/sincro-rtc/: AudioBrokerTest.py  README.md  RTCSignalingServer.py  Sincromisor.py  pyproject.toml
sincromisor-server/sincro-rtc/src/sincro_rtc/AudioBroker/: AudioBroker.py  Exceptions.py  ExtractorReceiverThread.py  ExtractorSenderThread.py  ExtractorThread.py  RecognizerReceiverThread.py  RecognizerSenderThread.py  RecognizerThread.py  SynthesizerReceiverThread.py  SynthesizerSenderThread.py  SynthesizerThread.py  TextProcessorReceiverThread.py  TextProcessorSenderThread.py  TextProcessorThread.py  __init__.py
sincromisor-server/sincro-rtc/src/sincro_rtc/RTCSession/: RTCSessionManager.py  RTCSessionProcess.py  RTCSessionProcessDescription.py  RTCSessionProcessManagementThread.py  VoiceTransformTrack.py  __init__.py
sincromisor-server/sincro-rtc/src/sincro_rtc/models/: RTCSessionOffer.py  RTCSignalingServerArgument.py  RTCVoiceChatSession.py  SincromisorProcessArgument.py  __init__.py
sincromisor-server/sincro-rtc/src/sincro_rtc/utils/: MemoryProfiler.py  __init__.py
sincromisor-server/speech-recognizer/: README.md  SpeechRecognizerProcess.py  pyproject.toml
sincromisor-server/speech-recognizer-nemo/: SpeechRecognizerNemoProcess.py  pyproject.toml
sincromisor-server/speech-recognizer-nemo/src/speech_recognizer_nemo/SpeechRecognizerNemo/: SpeechRecognizerNemo.py  SpeechRecognizerNemoWorker.py  __init__.py
sincromisor-server/speech-recognizer-nemo/src/speech_recognizer_nemo/models/: SpeechRecognizerNemoProcessArgument.py  __init__.py
sincromisor-server/speech-recognizer/src/speech_recognizer/SpeechRecognizer/: SpeechRecognizer.py  SpeechRecognizerMinioClient.py  SpeechRecognizerWorker.py  __init__.py
sincromisor-server/speech-recognizer/src/speech_recognizer/models/: SpeechRecognizerProcessArgument.py  __init__.py
sincromisor-server/text-processor/: TextProcessorProcess.py  pyproject.toml
sincromisor-server/text-processor/src/text_processor/Dify/: DifyClient.py  __init__.py
sincromisor-server/text-processor/src/text_processor/PokeText/: PokeText.py  __init__.py
sincromisor-server/text-processor/src/text_processor/TextProcessor/: DifyTextProcessorWorker.py  PokeTextProcessorWorker.py  TextProcessorWorker.py  __init__.py
sincromisor-server/text-processor/src/text_processor/models/: TextProcessorProcessArgument.py  __init__.py
sincromisor-server/voice-synthesizer/: README.md  VoiceSynthesizerProcess.py  pyproject.toml
sincromisor-server/voice-synthesizer/src/voice_synthesizer/VoiceSynthesizer/: VoiceCacheManager.py  VoiceSynthesizer.py  VoiceSynthesizerWorker.py  VoiceVox.py  __init__.py
sincromisor-server/voice-synthesizer/src/voice_synthesizer/models/: VoiceSynthesizerProcessArgument.py  __init__.py
src/: AudioBrokerTest.py  Launcher.py  Sincromisor.py  SpeechExtractorProcess.py  SpeechExtractorWorkerProcess.py  SpeechRecognizerProcess.py  SpeechRecognizerWorkerProcess.py  VoiceSynthesizerProcess.py  VoiceSynthesizerWorkerProcess.py  package-lock.json  package.json  webpack.config.js
volumes/: README.md
(+251 files in other folders)
