[project]
name = "sincromisor"
version = "0.1.0"
description = "Sincromisor-0.1.0 dayo."
authors = [
    { name = "Akito Miura", email = "phenomer@g.hachune.net" }
]
dependencies = [
    "uvicorn>=0.30.6",
    "fastapi>=0.112.2",
    "websockets>=13.0.1",
    "redis[hiredis]>=5.0.8",
    "setproctitle>=1.3.3",
    "aiortc>=1.9.0",
    "av>=12.3.0",
    "torch>=2.3.1",
    "transformers==4.37.2",
    "accelerate>=0.31.0",
    "deepspeed>=0.14.4",
    "sentencepiece>=0.2.0",
    "mediapipe==0.10.15",
    "sudachipy>=0.6.8",
    "sudachidict-full>=20240409",
    "nue-asr @ git+https://github.com/rinnakk/nue-asr.git",
    "numpy==1.26.4",
    "google-crc32c @ https://files.pythonhosted.org/packages/a9/d0/04f2846f0af1c683eb3b664c9de9543da1e66a791397456a65073b6054a2/google_crc32c-1.5.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl",
    "setuptools>=70.1.1",
    "python-ulid>=2.7.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.10.1",
    "types-psutil>=6.0.0.20240621",
    "types-pyyaml>=6.0.12.20240311",
    "types-requests>=2.32.0.20240622",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sincromisor"]
