[project]
name = "sincromisor"
version = "2.0.0"
description = "Sincromisor-2.0.0"
authors = [
    { name = "Akito Miura", email = "phenomer@g.hachune.net" }
]
dependencies = [
    "setuptools>=70.1.1",
]

readme = "README.md"
requires-python = ">= 3.10"

[dependency-groups]
dev = [
    "mypy>=1.10.1",
    "types-psutil>=6.0.0.20240621",
    "types-pyyaml>=6.0.12.20240311",
    "types-requests>=2.32.0.20240622",
]

full = [
    "sincro-rtc",
    "speech-extractor",
    "speech-recognizer",
    "text-processor",
    "voice-synthesizer",
]

sincro-rtc = [
    "sincro-rtc",
]

speech-extractor = [
    "speech-extractor",
]

speech-recognizer = [
    "speech-recognizer",
]

text-processor = [
    "text-processor",
]

voice-synthesizer = [
    "voice-synthesizer",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = []

[tool.uv.workspace]
members = [
    "sincromisor-server/sincro-config",
    "sincromisor-server/sincro-models",
    "sincromisor-server/sincro-rtc",
    "sincromisor-server/speech-recognizer",
    "sincromisor-server/speech-extractor",
    "sincromisor-server/voice-synthesizer",
    "sincromisor-server/text-processor",
    "sincromisor-server/sincro-models",
]

[tool.uv.sources]
sincro-config = { workspace = true }
sincro-models = { workspace = true }
sincro-rtc = { workspace = true }
speech-extractor = { workspace = true }
speech-recognizer = { workspace = true }
voice-synthesizer = { workspace = true }
text-processor = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["sincromisor-server"]
