[project]
name = "sincro-config"
version = "2.0.0"
description = "Sincromisor configuration loader"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0.2",
    "pydantic>=2.9.2",
    "redis>=5.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sincro_config"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
