[project]
name = "sincro-rtc"
version = "2.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sincro-config",
    "sincro-models",
    "aiortc>=1.9.0",
    "websockets>=14.1",
    "av>=12.3.0",
    "google-crc32c>=1.6.0",
    "numpy==1.26.4",
    "pydantic>=2.10.4",
    "python-ulid>=2.7.0",
    "setproctitle>=1.3.3",
    "uvicorn>=0.34.0",
    "fastapi>=0.115.6",
    "setproctitle>=1.3.3",
]

[tool.uv.sources]
sincro-config = { workspace = true }
sincro-models = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/sincro_rtc"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
