[project]
name = "speech-recognizer"
version = "2.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sincro-config",
    "sincro-models",
    #"torch>=2.3.1",
    #"transformers==4.37.2",
    #"accelerate>=0.31.0",
    #"deepspeed>=0.14.4",
    #"sentencepiece>=0.2.0",
    #"nue-asr @ git+https://github.com/rinnakk/nue-asr.git",
    "pydantic>=2.9.2",
    "numpy==1.26.4",
    "uvicorn>=0.30.6",
    "fastapi>=0.112.2",
    "setproctitle>=1.3.3",
]

[tool.uv.sources]
sincro-config = { workspace = true }
sincro-models = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/speech_recognizer"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
