[project]
name = "speech-recognizer"
version = "2.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sincro-config",
    "sincro-models",
    "torch>=2.3.1",
    "transformers==4.48.0",
    "librosa>=0.10.2.post1",
    "accelerate>=1.2.1",
    "deepspeed>=0.16.2",
    "sentencepiece>=0.2.0",
    "nue-asr @ git+https://github.com/rinnakk/nue-asr.git",
    "pydantic>=2.10.4",
    "numpy==1.26.4",
    "uvicorn>=0.34.0",
    "fastapi>=0.115.6",
    "websockets>=14.1",
    "setproctitle>=1.3.4",
    "minio>=7.2.15",
]

[tool.uv.sources]
sincro-config = { workspace = true }
sincro-models = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/speech_recognizer"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
