[project]
name = "text-processor"
version = "2.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sincro-config",
]

[tool.uv.sources]
sincro-config = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/text_processor"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
