[project]
name = "text-processor"
version = "2.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sincro-config",
    "sincro-models",
    "sudachipy>=0.6.9",
    "sudachidict-full>=20241021",
    "requests>=2.32.3",
    "pydantic>=2.10.4",
    "uvicorn>=0.30.6",
    "fastapi>=0.112.2",
    "websockets>=13.0.1",
    "setproctitle>=1.3.3",
]

[tool.uv.sources]
sincro-config = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/text_processor"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
