[project]
name = "voice-synthesizer"
version = "2.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sincro-config",
    "sincro-models",
    "sudachipy>=0.6.8",
    "sudachidict-full>=20240409",
    "redis[hiredis]>=5.0.8",
    "requests>=2.32.3",
    "pydantic>=2.9.2",
    "numpy==1.26.4",
    "uvicorn>=0.30.6",
    "fastapi>=0.112.2",
    "websockets>=13.0.1",
    "setproctitle>=1.3.3",
]

[tool.uv.sources]
sincro-config = { workspace = true }
sincro-models = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/voice_synthesizer"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
