[project]
name = "voice-synthesizer"
version = "2.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sincro-config",
    "sincro-models",
    "redis[hiredis]>=5.2.0",
    "requests>=2.32.3",
    "pydantic>=2.10.4",
    "numpy==1.26.4",
    "uvicorn>=0.34.0",
    "fastapi>=0.115.6",
    "websockets>=14.1",
    "setproctitle>=1.3.4",
]

[tool.uv.sources]
sincro-config = { workspace = true }
sincro-models = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/voice_synthesizer"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
